--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,34 @@
 <classpath>
 	<classpathentry kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/vasan/Downloads/stanford-corenlp-latest/stanford-corenlp-4.2.0/ejml-core-0.39.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vasan/Downloads/stanford-corenlp-latest/stanford-corenlp-4.2.0/ejml-core-0.39-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vasan/Downloads/stanford-corenlp-latest/stanford-corenlp-4.2.0/ejml-ddense-0.39.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vasan/Downloads/stanford-corenlp-latest/stanford-corenlp-4.2.0/ejml-ddense-0.39-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vasan/Downloads/stanford-corenlp-latest/stanford-corenlp-4.2.0/ejml-simple-0.39.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vasan/Downloads/stanford-corenlp-latest/stanford-corenlp-4.2.0/ejml-simple-0.39-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vasan/Downloads/stanford-corenlp-latest/stanford-corenlp-4.2.0/javax.activation-api-1.2.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vasan/Downloads/stanford-corenlp-latest/stanford-corenlp-4.2.0/javax.activation-api-1.2.0-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vasan/Downloads/stanford-corenlp-latest/stanford-corenlp-4.2.0/javax.json.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vasan/Downloads/stanford-corenlp-latest/stanford-corenlp-4.2.0/javax.json-api-1.0-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vasan/Downloads/stanford-corenlp-latest/stanford-corenlp-4.2.0/jaxb-api-2.4.0-b180830.0359.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vasan/Downloads/stanford-corenlp-latest/stanford-corenlp-4.2.0/jaxb-api-2.4.0-b180830.0359-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vasan/Downloads/stanford-corenlp-latest/stanford-corenlp-4.2.0/jaxb-core-2.3.0.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vasan/Downloads/stanford-corenlp-latest/stanford-corenlp-4.2.0/jaxb-core-2.3.0.1-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vasan/Downloads/stanford-corenlp-latest/stanford-corenlp-4.2.0/jaxb-impl-2.4.0-b180830.0438.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vasan/Downloads/stanford-corenlp-latest/stanford-corenlp-4.2.0/jaxb-impl-2.4.0-b180830.0438-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vasan/Downloads/stanford-corenlp-latest/stanford-corenlp-4.2.0/joda-time.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vasan/Downloads/stanford-corenlp-latest/stanford-corenlp-4.2.0/joda-time-2.10.5-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vasan/Downloads/stanford-corenlp-latest/stanford-corenlp-4.2.0/jollyday.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vasan/Downloads/stanford-corenlp-latest/stanford-corenlp-4.2.0/jollyday-0.4.9-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vasan/Downloads/stanford-corenlp-latest/stanford-corenlp-4.2.0/protobuf.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vasan/Downloads/stanford-corenlp-latest/stanford-corenlp-4.2.0/slf4j-api.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vasan/Downloads/stanford-corenlp-latest/stanford-corenlp-4.2.0/slf4j-simple.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vasan/Downloads/stanford-corenlp-latest/stanford-corenlp-4.2.0/stanford-corenlp-4.2.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vasan/Downloads/stanford-corenlp-latest/stanford-corenlp-4.2.0/stanford-corenlp-4.2.0-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vasan/Downloads/stanford-corenlp-latest/stanford-corenlp-4.2.0/stanford-corenlp-4.2.0-models.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vasan/Downloads/stanford-corenlp-latest/stanford-corenlp-4.2.0/stanford-corenlp-4.2.0-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vasan/Downloads/stanford-corenlp-latest/stanford-corenlp-4.2.0/xom.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vasan/Downloads/stanford-corenlp-latest/stanford-corenlp-4.2.0/xom-1.3.2-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
